new component: sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <router-outlet></router-outlet>
 
-<app-calendar-container></app-calendar-container>
+<div class="flex h-screen">
+  <app-sidenav></app-sidenav>
+  <app-calendar-container></app-calendar-container>
+</div>
