--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,16 @@
 
 <div class="flex h-screen">
   <app-sidenav></app-sidenav>
-  <app-calendar-container></app-calendar-container>
+  <div class="p-20 flex">
+    <div class="flex flex-col">
+      <app-calendar-container></app-calendar-container>
+    </div>
+    <div class="ml-20">
+      <div>
+        today's event (if none click add event, if exist click edit/delete)
+      </div>
+      <div class="mt-8">upcoming event</div>
+    </div>
+    <div class="absolute right-0 top-0 h-full w-80 bg-red-100">drawer</div>
+  </div>
 </div>
