--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,43 @@
       </div>
       <div class="mt-8">upcoming event</div>
     </div>
-    <div class="absolute right-0 top-0 h-full w-80 bg-red-100">drawer</div>
+    <div
+      class="
+        absolute
+        right-0
+        top-0
+        h-full
+        w-80
+        bg-gray-200
+        shadow-xl
+        px-6
+        pb-6
+        border-l
+      "
+    >
+      <div class="flex flex-col h-full">
+        <div class="my-8 font-semibold text-lg uppercase">23 July 2021</div>
+        <form class="flex flex-col justify-between h-full">
+          <div>
+            <div class="flex flex-col">
+              <label for="time" class="mb-1">Time</label>
+              <input type="time" name="time" id="time" />
+            </div>
+            <div class="flex flex-col mt-6">
+              <label for="activity" class="mb-1">Activity</label>
+              <textarea name="activity" id="" cols="30" rows="10"></textarea>
+            </div>
+          </div>
+          <div class="flex justify-end">
+            <button
+              type="submit"
+              class="py-3 px-12 rounded-md bg-gray-900 text-white"
+            >
+              Save
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
