added cards to today and upcoming events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,14 @@
       <app-calendar-container></app-calendar-container>
     </div>
     <div class="ml-20">
-      <div>
+      <div class="bg-white shadow-md p-4 rounded-md">
         today's event (if none click add event, if exist click edit/delete)
       </div>
-      <div class="mt-8">upcoming event</div>
+      <div class="mt-8 bg-white shadow-md p-4 rounded-md">upcoming event</div>
     </div>
     <div
       class="
+        hidden
         absolute
         right-0
         top-0
