--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -7,13 +7,7 @@
   </div>
 
   <div class="ml-20">
-    <div class="bg-white shadow-md p-4 rounded-md w-80">
-      <div class="flex justify-between items-center mb-4">
-        <span class="font-semibold">Today's Event</span>
-        <button class="py-1.5 px-6 bg-black rounded-md text-white text-sm font-semibold">{{ selectedActivity ? 'Edit' : 'Add' }}</button>
-      </div>
-      <div [ngClass]="selectedActivity ? '' : 'text-gray-500'">{{ selectedActivity ? selectedActivity : 'No activity on the selected date.' }}</div>
-    </div>
+    <app-schedule-detail [selectedActivity]="selectedActivity"></app-schedule-detail>
   </div>
 
   <div class="hidden absolute right-0 top-0 h-full w-80 bg-gray-200 shadow-xl px-6 pb-6 border-l">
