working on displaying and hiding drawer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="flex h-screen">
+<div class="flex h-screen w-screen overflow-x-hidden">
   <app-sidenav></app-sidenav>
-  <router-outlet></router-outlet>
+  <div class="w-full">
+    <router-outlet></router-outlet>
+  </div>
 </div>
