--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <div [ngClass]="displayDrawer ? 'translate-x-0 ' : 'translate-x-full'" class="transform transition duration-400 h-full w-full bg-gray-200 shadow-xl px-6 pb-6 border-l">
+  <div [ngClass]="displayDrawer ? 'translate-x-0 ' : 'translate-x-full'" class="transform transition duration-400 h-full w-80 bg-gray-200 shadow-xl px-6 pb-6 border-l">
     <app-drawer></app-drawer>
   </div>
 </div>
