working on drawer transition

--- a/src/app/pages/schedule/components/drawer/drawer.component.html
+++ b/src/app/pages/schedule/components/drawer/drawer.component.html
@@ -1,5 +1,4 @@
-<div class="flex flex-col h-full w-full">
-
+<div class="flex flex-col">
   <div class="my-8 font-semibold text-lg uppercase">23 July 2021</div>
   <form class="flex flex-col justify-between h-full">
     <div>
